--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 /*NAVBAR*/
 
 .navbar{
-  background-color: #1b4332;
+  background-color: white;
 
   display: flex;
   flex-direction: row;
@@ -30,19 +30,36 @@ li{
   align-items: center;
 }
 
-li a {
-  margin: 0 1rem;
-  color:#74c69d;
-  padding: 0.5rem 1.5rem;
-  /* border: 1px solid white; */
-  /* border-radius: 2rem; */
-  transition: 0.35s;
+.lnk-home a , .lnk-projects a {
+  /* background: #1b4332; */
+  border-radius: 12px;
+  border-color: #74c69d ;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 16px;
+  transition: 0.3s ease background;
+  min-width: 10%;
   text-decoration: none;
+  color: #1b4332;
 }
 
-li a:hover {
-  box-shadow: 0 0 10px 2px white,
-    inset 0 0 10px 2px white;
+.lnk-home a:hover, .lnk-contact:hover , .lnk-projects :hover{
+  background-color: #74c69d ;
+  transition: 0.3s ease background;
+  
+}
+.lnk-contact a {
+  border-radius: 12px;
+  border-color: #74c69d ;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  text-transform: uppercase;
+  transition: 0.3s ease background;
+  min-width: 10%;
+  color:white;
+  text-decoration: none;
 }
 
 /* HOME */
@@ -64,7 +81,7 @@ li a:hover {
   color: #74c69d ;
 }
 
-.btn-cv{
+.btn-cv, .lnk-contact{
   background: #1b4332;
   border-radius: 12px;
   border-color: #74c69d ;
@@ -89,7 +106,6 @@ button:hover {
 }
 
 .presentation {
-  
   background-color: #1b4332;
   border-radius: 20px;
   box-shadow: 10px 10px 10px 5px #74c69d;
@@ -102,6 +118,27 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: flex-start ;
-  
+}
+
+/* PROJECTS */
+.container-projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.item-projects{
+  background: violet;
+  width: 40rem;
+  height: 20rem;
+  margin: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+
 }
 
