--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,12 @@ button:hover , .lnk-contact a:hover{
   border-radius: 50px;
 }
 
+.title-projects{
+  margin:3rem;
+  font-size: 40px;
+  color: #1b4332;
+}
+
 
 
 
