--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+
 }
 ul {
   display: flex;
@@ -47,9 +48,10 @@ li {
   color: #1b4332;
 }
 .lnk-contact a,
-.btn-cv a,
-.btn-projects a,
-.btn-projects-github a {
+.btn-cv a
+/* .btn-projects a,
+.btn-projects-github a*/
+{ 
   border-radius: 12px;
   border-color: #74c69d;
   cursor: pointer;
@@ -145,7 +147,7 @@ button:hover,
   align-items: flex-start;
 }
 /* PROJECTS & CONTACTS */
-.container-projects,
+/* .container-projects, */
 .container-contact {
   display: flex;
   flex-direction: column;
@@ -154,18 +156,21 @@ button:hover,
 }
 .item-projects {
   margin: 3rem;
-}
-.item-projects p {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  text-align: center;
 }
+
+
 .container-buttons-project {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  justify-content: center;
 }
+
+
 .btn-projects,
 .btn-projects-github {
   background: #1b4332;
@@ -176,9 +181,27 @@ button:hover,
   margin-bottom: 1rem;
   font-size: 14px;
   padding: 8px 16px;
+  position: relative;
   transition: 0.3s ease background;
   width: 50%;
 }
+
+.btn-projects a,
+.btn-projects-github a {
+  border-radius: 12px;
+  border-color: #74c69d;
+  cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  transition: 0.3s ease background;
+  color: white;
+  text-decoration: none;
+
+}
+
 .btn-contact {
   background: #1b4332;
   border-radius: 12px;
@@ -195,14 +218,34 @@ button:hover,
   color: white;
   text-decoration: none;
 }
+
+
+
 .card-body {
   text-align: center;
   background-color: #fefbf3;
 }
+
+
+
+/* .card-body {
+  font-size: 3vw;
+} */
 .card {
   box-shadow: #74c69d 0px 5px 25px;
-  background-color: #fefbf3;
-  border-radius: 50px;
+  width: 50%;
+  
+}
+
+.card-text p {
+  /* font-size: 2vw; */
+  padding: 0 5% 0 5%;
+  font-size: 2vw; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  text-align: center;
+
 }
 .title-projects,
 .title-contact {
@@ -212,5 +255,23 @@ button:hover,
 }
 .card-title {
   color: #1b4332;
+  font-size: 2vw; 
   text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  text-align: center;
+
+  
+}
+
+@media only screen and (max-width: 400px) {
+  .navbar-container {
+    background-color:red;
+    
+    /* display: flex;
+    justify-content: flex-end;
+    margin-left: 3rem;
+    margin-right: 1rem; */
+  }
 }
